update code with error

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="https://conteudo.imguol.com.br/c/entretenimento/f1/2021/11/15/o-poster-mostra-peter-parker-e-doutor-estranho-lutando-contra-os-viloes-dos-homem-aranha-antigos-1637010597234_v2_4x3.jpg" alt="SPIDER-MAN No Way Home. (2021)"/>
           </div>
           <div class="movie-text">
-            <h4>Spider-Man (2021)</h4>
+            <h4>Spider-Man (2021)
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -61,8 +61,7 @@
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
                 <span>Favoritar</span>
-              </div>
-            </div>
+
           </div>
         </div>
         <div class="movie-description">
