--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>When a sadistic serial killer begins murdering key political figures in Gotham, Batman is forced to investigate the city's hidden corruption and question his family's involvement.</span>
+          <span>Quando um serial killer sádico começa a assassinar figuras políticas importantes em Gotham, Batman é forçado a investigar a corrupção oculta da cidade e questionar o envolvimento de sua família.</span>
         </div>
       </div>
 
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>The film is a sequel to Spider-Man: Homecoming and Spider-Man: Far From Home, as well as a crossover/sequel to the Spider-Man trilogy and The Amazing Spider-Man duology.</span>
+          <span>O filme é uma sequência de Homem-Aranha: De Volta ao Lar e Homem-Aranha: Longe de Casa, bem como um crossover/sequência da trilogia do Homem-Aranha e da duologia O Espetacular Homem-Aranha.</span>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Martial-arts master Shang-Chi confronts the past he thought he left behind when he's drawn into the web of the mysterious Ten Rings organization.</span>
+          <span>O mestre de artes marciais Shang-Chi confronta o passado que pensou ter deixado para trás quando é atraído para a teia da misteriosa organização dos Dez Anéis.</span>
         </div>
       </div>
     </div>
